--- a/src/App.css
+++ b/src/App.css
@@ -29,3 +29,17 @@ h4 {
   grid-template-columns: repeat(auto-fill, 350px);
   justify-content: center;
 }
+
+.checkOutContainer{
+  width: 80%;
+  margin: 40px auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 10px;
+}
+
+.formulario {
+  display: flex;
+  gap: 5px;
+}
